# AIComputerUseGUI

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: copilot-instructions.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  api.rs  lib.rs  main.rs  screenshot.rs  types.rs
src/components/: ChatHistory.tsx  CommandInput.tsx  ScreenshotViewer.tsx  SessionHistory.tsx  SettingsPanel.tsx  StatusBar.tsx  index.ts
src/hooks/: useAgent.ts  useSessions.ts  useSettings.ts
src/types/: index.ts
